--- a/api/qsharp/microsoft.quantum.logical.equall.yml
+++ b/api/qsharp/microsoft.quantum.logical.equall.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.logical.equall
 name: EqualL
 type: function
-namespace: Microsoft.Quantum.Logical
+namespace: microsoft.quantum.logical
 summary: 当且仅当两个输入相等时，返回 true。
 remarks: >-
   以下项是等效的：
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: '`true`当且仅当`a`等于时`b`。'
+  - summary: '`true` 当且仅当 `a` 等于时 `b` 。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: d0ffa5d1c47b407fc2e62e73220bbcea40f16a78
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 7f17eae421a3f8e4fb0c2a9c3a7a19a9432a8cd2
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685916"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89345978"
