--- a/api/qsharp/microsoft.quantum.math.tanh.yml
+++ b/api/qsharp/microsoft.quantum.math.tanh.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.math.tanh
 name: Tanh
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回指定角度的双曲正切值。
-remarks: 有关更多详细信息，请参阅[Tanh](https://docs.microsoft.com/dotnet/api/system.math.tanh) 。
+remarks: 有关更多详细信息，请参阅 [Tanh](https://docs.microsoft.com/dotnet/api/system.math.tanh) 。
 syntax: 'function Tanh (d : Double) : Double'
 input:
   content: '(d : Double)'
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 9b662cf73f1fc16edacf245e7cbd53f952a5508a
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 900549f91e5057d83e1a19373f5c02e6ac6ee8af
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685302"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89332803"
