--- a/api/qsharp/microsoft.quantum.math.timesc.yml
+++ b/api/qsharp/microsoft.quantum.math.timesc.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.math.timesc
 name: TimesC
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回两个输入的乘积。
 syntax: 'function TimesC (a : Microsoft.Quantum.Math.Complex, b : Microsoft.Quantum.Math.Complex) : Microsoft.Quantum.Math.Complex'
 input:
@@ -20,9 +20,9 @@ output:
   - summary: Product $a \times b $。
     uid: microsoft.quantum.math.complex
 metadata:
-  ms.openlocfilehash: 8d4bf6e21a66eb51cefa2d666ba691d3d4daeaf6
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 16a93255d7bd98fd8b67a3caf585e8d7b845cf3e
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685276"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89332769"
