--- a/api/qsharp/microsoft.quantum.arrays.where.yml
+++ b/api/qsharp/microsoft.quantum.arrays.where.yml
@@ -2,14 +2,14 @@
 uid: microsoft.quantum.arrays.where
 name: Where
 type: function
-namespace: Microsoft.Quantum.Arrays
+namespace: microsoft.quantum.arrays
 summary: 给定谓词和数组后，返回该数组的索引，其中谓词为 true。
 syntax: "function Where (predicate : ('T -> Bool), array : 'T[]) : Int[]"
 input:
   content: "(predicate : ('T -> Bool), array : 'T[])"
   types:
   - name: predicate
-    summary: 从`'T`到用于筛选元素的布尔值的函数。
+    summary: 从 `'T` 到用于筛选元素的布尔值的函数。
     isFunction: true
     input:
       types:
@@ -20,24 +20,24 @@ input:
       - isPrimitive: true
         uid: Bool
   - name: array
-    summary: 上`'T`的元素的数组。
+    summary: 上的元素的数组 `'T` 。
     isArray: true
     uid: "'T"
     isLocal: true
 output:
   content: Int[]
   types:
-  - summary: 一个索引数组，其中`predicate`为 true。
+  - summary: 一个索引数组，其中 `predicate` 为 true。
     isArray: true
     isPrimitive: true
     uid: Int
 typeParameters:
 - uid: "'T"
-  summary: '`array`元素的类型。'
+  summary: 元素的类型 `array` 。
 metadata:
-  ms.openlocfilehash: 2d62fcf97bcd72d2327aeb13db3600324ce6661f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: bdee40c5a3b275077c8d0846b169327d3d2edd66
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82680768"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89351469"
