--- a/api/qsharp/microsoft.quantum.arrays.zip3.yml
+++ b/api/qsharp/microsoft.quantum.arrays.zip3.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.arrays.zip3
 name: Zip3
 type: function
-namespace: Microsoft.Quantum.Arrays
+namespace: microsoft.quantum.arrays
 summary: 给定三个数组，返回一个新数组，其中包含3个元组，以便每个第三个元组包含每个原始数组中的一个元素。
 syntax: "function Zip3 (first : 'T1[], second : 'T2[], third : 'T3[]) : ('T1, 'T2, 'T3)[]"
 input:
@@ -26,7 +26,7 @@ input:
 output:
   content: ('T1, 'T2, 'T3)[]
   types:
-  - summary: 一个数组，其中包含每个`(first[idx], second[idx], third[idx])` `idx`的窗体的3元组。 如果三个数组的长度不相等，则输出将与输入的较短内容相同。
+  - summary: 一个数组，其中包含每个的窗体的3元组 `(first[idx], second[idx], third[idx])` `idx` 。 如果三个数组的长度不相等，则输出将与输入的较短内容相同。
     isArray: true
     types:
     - uid: "'T1"
@@ -46,9 +46,9 @@ seeAlso:
 - zip
 - zip4
 metadata:
-  ms.openlocfilehash: 899066b309e41df3a1bb2bdce93382ff58de2662
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: d16fb3da1b11fbed9487ef8555dd83bb6b3a16a5
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82680737"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89351384"
