--- a/api/qsharp/microsoft.quantum.arrays.zip4.yml
+++ b/api/qsharp/microsoft.quantum.arrays.zip4.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.arrays.zip4
 name: Zip4
 type: function
-namespace: Microsoft.Quantum.Arrays
+namespace: microsoft.quantum.arrays
 summary: 给定四个数组，返回一个4元组的新数组，使每个4元组包含每个原始数组中的一个元素。
 syntax: "function Zip4 (first : 'T1[], second : 'T2[], third : 'T3[], fourth : 'T4[]) : ('T1, 'T2, 'T3, 'T4)[]"
 input:
@@ -31,7 +31,7 @@ input:
 output:
   content: ('T1, 'T2, 'T3, 'T4)[]
   types:
-  - summary: 一个数组，其中包含每个`(first[idx], second[idx], third[idx], fourth[idx])` `idx`的窗体的4元组。 如果四个数组的长度不相等，则输出将与输入的较短内容相同。
+  - summary: 一个数组，其中包含每个的窗体的4元组 `(first[idx], second[idx], third[idx], fourth[idx])` `idx` 。 如果四个数组的长度不相等，则输出将与输入的较短内容相同。
     isArray: true
     types:
     - uid: "'T1"
@@ -55,9 +55,9 @@ seeAlso:
 - zip
 - zip3
 metadata:
-  ms.openlocfilehash: 5e099a24bdcad341d018cf7c5becec8a4d558631
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 437027a767ea7a2c49fd3b8dfa73858c847942c6
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82680727"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89351333"
