--- a/api/qsharp/microsoft.quantum.logical.lessthani.yml
+++ b/api/qsharp/microsoft.quantum.logical.lessthani.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.logical.lessthani
 name: LessThanI
 type: function
-namespace: Microsoft.Quantum.Logical
+namespace: microsoft.quantum.logical
 summary: 当且仅当一个数字小于另一个数字时，返回 true。
 remarks: >-
   以下项是等效的：
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: '`true`当且仅当`a`严格小于时`b`。'
+  - summary: '`true` 当且仅当 `a` 严格小于时 `b` 。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 3711564d51f6a9fd1fb1a4d6b429e29edcfd6127
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 70d51aa7450cbefce555bf6d3048af5463ee0332
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684704"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89345672"
