--- a/api/qsharp/microsoft.quantum.logical.lessthanorequall.yml
+++ b/api/qsharp/microsoft.quantum.logical.lessthanorequall.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.logical.lessthanorequall
 name: LessThanOrEqualL
 type: function
-namespace: Microsoft.Quantum.Logical
+namespace: microsoft.quantum.logical
 summary: 当且仅当一个数字小于或等于另一个数字时，返回 true。
 remarks: >-
   以下项是等效的：
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: '`true`当且仅当`a`小于或等于时`b`。'
+  - summary: '`true` 当且仅当 `a` 小于或等于时 `b` 。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 48570cf03cfcf676af633ee2f07b904698b471b6
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 1f8c2eadc09bc1f4777a5d37ed4cd0c1171d9cf5
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684635"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89345468"
