--- a/api/qsharp/microsoft.quantum.logical.notequalc.yml
+++ b/api/qsharp/microsoft.quantum.logical.notequalc.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.logical.notequalc
 name: NotEqualC
 type: function
-namespace: Microsoft.Quantum.Logical
+namespace: microsoft.quantum.logical
 summary: 当且仅当两个输入不相等时，返回 true。
 syntax: 'function NotEqualC (a : Microsoft.Quantum.Math.Complex, b : Microsoft.Quantum.Math.Complex) : Bool'
 input:
@@ -17,13 +17,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: '`true`当且仅当`a`不等于时`b`。'
+  - summary: '`true` 当且仅当不 `a` 等于时 `b` 。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 1047a12a676440e93f736df7d8220c23f3ac0a0c
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: d6c146c99e8b5b8dda1add4dffba28de71b69a55
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684562"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89345366"
