--- a/api/qsharp/microsoft.quantum.math.signl.yml
+++ b/api/qsharp/microsoft.quantum.math.signl.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.math.signl
 name: SignL
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回指示数字符号的整数。
-remarks: 有关更多详细信息，请参阅[system.object](https://docs.microsoft.com/dotnet/api/system.math.sign) 。
+remarks: 有关更多详细信息，请参阅 [system.object](https://docs.microsoft.com/dotnet/api/system.math.sign) 。
 syntax: 'function SignL (a : BigInt) : Int'
 input:
   content: '(a : BigInt)'
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 426c59418b741c3369a3b5d733bc2e3488d44761
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 1d0a4e96c6dfabc4d75d2de6f26bdf2efbfe8586
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82682719"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89332990"
